# class

./: .gitignore  2-传感器模块.md  CMakeLists.txt  GEC6818.h  README.md  arm-linux-toolchain.cmake  led_drv.ko  main  main.c  mount.exfat-fuse  send.sh  ui_app.conf
day2/: china  china.c  file  file.c
docs/: gec6818-board-spec.md
font/: word.json
frontend/: app.ts  build-ui.js  ts_ui_demo.c
include/inc/: lcd.h  log.h
include/src/: lcd.c
lib/inc/: lcd.h  led.h  log.h  pic.h  pwm.h  touch.h  uarts.h  ui_app.h  ui_app_data.h  word.h
lib/src/: lcd.c  led.c  pic.c  pwm.c  touch.c  uarts.c  ui_app.c  word.c
